Task17: Navigating from Code.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Creating-a-Route/Creating-a-Route.iml
 /Using-Route-Parameters/node_modules/
 /Linking-to-Routes/node_modules/
+/Navigating-from-Code/node_modules/
