Task18: Preventing a Route from Activating.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Using-Route-Parameters/node_modules/
 /Linking-to-Routes/node_modules/
 /Navigating-from-Code/node_modules/
+/Preventing-a-Route-from-Activating/node_modules/
