Task19: Preventing a Route from De-activating.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Linking-to-Routes/node_modules/
 /Navigating-from-Code/node_modules/
 /Preventing-a-Route-from-Activating/node_modules/
+/Preventing-a-Route-from-De-activating/node_modules/
